# Struktury_danych

./: CMakeLists.txt  Czas.cpp  Czas.h  Drzewo.cpp  Drzewo.h  ElementDrzewa.h  ElementListy.cpp  ElementListy.h  Kopiec.cpp  Kopiec.h  Lista.cpp  Lista.h  README.md  Tablica.cpp  Tablica.h  Testy.cpp  Testy.h  TestyAutomatyczne.cpp  TestyAutomatyczne.h  main.cpp
Input/: losowe_15000.txt  losowe_25000.txt  losowe_50000.txt
Output/: dodaj_5000.txt
