cmake_minimum_required(VERSION 3.24)
project(SDIZO1)

set(CMAKE_CXX_STANDARD 17)

add_executable(SDIZO1 main.cpp Tablica.cpp Tablica.h Lista.cpp Lista.h ElementListy.cpp ElementListy.h Kopiec.cpp Kopiec.h Drzewo.cpp Drzewo.h ElementDrzewa.cpp ElementDrzewa.h Testy.cpp Testy.h Czas.cpp Czas.h TestyAutomatyczne.cpp TestyAutomatyczne.h)
